--- a/layout/page.templ
+++ b/layout/page.templ
@@ -7,6 +7,7 @@ templ Page(content templ.Component) {
 			<meta charset="utf-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 			<script src="/static/htmx.min.js"></script>
+			<script src="https://unpkg.com/htmx.org@1.9.11/dist/ext/sse.js"></script>
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
 		</head>
 		<body class="container">
