--- a/routes/home/view.templ
+++ b/routes/home/view.templ
@@ -2,10 +2,5 @@ package home
 
 templ View() {
 	<h1>Home</h1>
-	<div class="placeholder" hx-trigger="load delay:500ms" hx-get="/result?name=apple" hx-swap="outerHTML">
-		Loading...
-	</div>
-	<div class="placeholder" hx-trigger="load delay:1s" hx-get="/result?name=banana" hx-swap="outerHTML">
-		Loading...
-	</div>
+	<div hx-ext="sse" sse-connect="/quoteevents" sse-swap="quote" hx-swap="beforeend"></div>
 }
